WE-20: Added post of a vehicle
