# api-documentation.yaml
@@ -257,6 +257,52 @@ paths:
                 $ref: '#/components/schemas/Error'
 
   /users/{username}/vehicles:
+    post:
+      tags:
+        - Vehicles
+      summary: Add a new Vehicle to the user
+      description: |
+        Inserts a new Vehicle for the given User into the database
+      parameters:
+        - in: path
+          name: username
+          schema:
+            type: string
+          required: true
+          description: Username of the User
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Vehicle'
+      responses:
+        '201':
+          description: Vehicle created succesfully
+        '400':
+          description: Request has not the needed format
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '401':
+          description: No Token
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '403':
+          description: Not the needed permission
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
     get:
       tags:
         - Vehicles
@@ -309,6 +355,9 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+
+
+
 
 components:
   schemas:
