# backend/controllers/vehicle.js
@@ -3,6 +3,17 @@ const vehicleService = require('../services/vehicleService');
 const {generateErrorMessage} = require('../util/error');
 const router = express.Router();
 
+router.post('/', vehicleService.checkVehicle, (req, res) => {
+
+	vehicleService.addNewVehicle(req, (err, data) => {
+		if (err) {
+			res.status(500).json(generateErrorMessage('Internal Server Error', 'Server'));
+		} else {
+			res.status(201).json({});
+		}
+	});
+});
+
 router.get('/', (req, res) => {
 	vehicleService.getAlLVehicles(req, (err, vehicles) => {
 		if (err) {
@@ -11,10 +22,6 @@ router.get('/', (req, res) => {
 			res.status(200).json(vehicles);
 		}
 	});
-});
-
-router.post('/', (req, res) => {
-
 });
 
 module.exports = router;
